--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.13.1
 drf-yasg==1.21.4
+gunicorn==20.1.0
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
@@ -15,6 +16,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 packaging==21.3
 Pillow==9.2.0
+psycopg2-binary==2.9.5
 pyparsing==3.0.9
 pytz==2022.2.1
 requests==2.28.1
