--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 .idea/
 media/
 static/
-production.py
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -134,3 +134,4 @@ dmypy.json
 # Pyre type checker
 .pyre/
 dev.py
+db.sqlite3
