--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==4.1
 django-cors-headers==3.13.0
 django-filter==22.1
 django-jazzmin==2.6.0
+django-nested-admin==4.0.2
 djangorestframework==3.13.1
 drf-yasg==1.21.4
 gunicorn==20.1.0
@@ -20,10 +21,12 @@ Pillow==9.2.0
 psycopg2-binary==2.9.5
 pyparsing==3.0.9
 python-decouple==3.7
+python-monkey-business==1.0.0
 pytz==2022.2.1
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.2
 uritemplate==4.1.1
